samples/_failures_safe/1761641187_251b06_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_92447d95.c: In function ‘parse_assignment’:
./samples/SAFE/__tmp_92447d95.c:168:9: error: expected expression at end of input
  168 |         return
      |         ^~~~~~
./samples/SAFE/__tmp_92447d95.c:168:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_92447d95.c:168:9: error: expected declaration or statement at end of input
